--- a/PainGain2017/WebContent/WEB-INF/web.xml
+++ b/PainGain2017/WebContent/WEB-INF/web.xml
@@ -9,7 +9,6 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-
   <servlet>
     <servlet-name>Login</servlet-name>
     <servlet-class>controller.Login</servlet-class>
@@ -18,8 +17,6 @@
     <servlet-name>Login</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
-
-  <!-- =================================================================== -->
   <servlet>
     <servlet-name>ActionNhanVien</servlet-name>
     <servlet-class>controller.ActionNhanVien</servlet-class>
@@ -28,8 +25,6 @@
     <servlet-name>ActionNhanVien</servlet-name>
     <url-pattern>/actionnhanvien</url-pattern>
   </servlet-mapping>
-  
- <!-- ======================================================= -->
   <servlet>
     <servlet-name>ActionKhachHang</servlet-name>
     <servlet-class>controller.ActionKhachHang</servlet-class>
@@ -38,8 +33,6 @@
     <servlet-name>ActionKhachHang</servlet-name>
     <url-pattern>/actionkhachhang</url-pattern>
   </servlet-mapping>
-  
-  <!-- =================================================================== -->
   <servlet>
     <servlet-name>ActionNcc</servlet-name>
     <servlet-class>controller.ActionNcc</servlet-class>
@@ -48,8 +41,6 @@
     <servlet-name>ActionNcc</servlet-name>
     <url-pattern>/actionncc</url-pattern>
   </servlet-mapping>
-  
- <!-- =================================================================== -->
   <filter>
     <filter-name>loginFilter</filter-name>
     <filter-class>paingainshop.filter.loginFilter</filter-class>
@@ -59,6 +50,8 @@
     <url-pattern>/home.jsp</url-pattern>
     <url-pattern>/employee.jsp</url-pattern>
     <url-pattern>/KhachHang.jsp</url-pattern>
+    <url-pattern>/chamcong.jsp</url-pattern>
+    <url-pattern>/nhacc.jsp</url-pattern>
+    <url-pattern>/thuongphat.jsp</url-pattern>
   </filter-mapping>
-
 </web-app>
